# rotors_quadrotor_control

./: CITATION.cff  README.md
common/quadrotor_common/: CMakeLists.txt  package.xml
common/quadrotor_common/include/quadrotor_common/: math.h  quadrotor_control_command.h  quadrotor_state_estimate.h  quadrotor_trajectory_point.h  state_estimate.h
common/quadrotor_common/src/quadrotor_common/: quadrotor_control_command.cpp  quadrotor_state_estimate.cpp  quadrotor_trajectory_point.cpp  state_estimate.cpp
control/position_controller/: CMakeLists.txt  package.xml
control/position_controller/include/position_controller/: position_controller.h  reference_inputs.h
control/position_controller/include/reference_inputs/: nominal_reference_inputs.h  reference_inputs.h
control/position_controller/src/position_controller/: position_controller.cpp  reference_inputs.cpp
control/position_controller/src/reference_inputs/: nominal_reference_inputs.cpp  reference_inputs.cpp
control/position_controller/test/: test_nominal_reference_inputs.cpp  test_position_controller.cpp  test_reference_inputs.cpp
