<?xml version="1.0"?>
<package format="2">
  <name>quadrotor_common</name>
  <version>0.0.0</version>
  <description>The quadrotor_common package</description>

  <maintainer email="neo@todo.todo">neo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>


  <export>
  </export>
</package>
