<?xml version="1.0"?>
<package format="2">
  <name>position_controller</name>
  <version>0.0.0</version>
  <description>The position_controller package</description>

  <maintainer email="neo@todo.todo">neo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>eigen_catkin</depend>


  <export>
  </export>
</package>
